FIX article images not aligning to the right on smartphone screen size
Article images were not aligning to the right. Fixed by changing parent's parent width and parent justify content.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -189,6 +189,7 @@ body {
   .news-article {
     padding: 10px 0;
     border-bottom: 1px solid #E6E6E6;
+    width: 100%;
   }
   .news-article:last-child {
     border-bottom: none;
@@ -197,6 +198,7 @@ body {
     width: 100%;
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
     text-decoration: none;
     color: #000;
   }
